--- a/latihan.html
+++ b/latihan.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        Pertemuan Pertama
+        <h1>judul pelatihan</h1>
+        Pertemuan Pertama 
     </body>
 </html>
