--- a/latihan.html
+++ b/latihan.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <h1>judul pelatihan</h1>
-        Pertemuan Pertama 
+        Pertemuan Pertama perubahan 1
     </body>
 </html>
